# command-scope-contract

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: SECURITY_ADVISORY_TEMPLATE.md  SECURITY_RELEASE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  hardened-tests.yml  release.yml
adapters/claude-code/: README.md
csc_runner/: approval.py  cli.py  executor.py  limits.py  models.py  pathutil.py  policy.py  receipts.py  sandbox.py  signing.py  utils.py
docs/: canonicalization.md  compatibility-matrix.md  deployment-modes.md  internal-red-team-review.md  key-management.md  non-goals.md  pic-mapping.md  pilot-retrospective.md  policy-packs.md  production-readiness-gate.md  production-readiness-plan.md  profiles.md  reason-codes.md  roadmap.md  security-targets.md  spec-v0.1.md  support-matrix.md  threat-model.md  versioning.md
rfcs/: 0001-csc-core.md  0002-pic-alignment.md  0003-csc-positioning.md  RFC_PROCESS.md  index.yaml
schemas/: csc.approval.v0.1.schema.json  csc.contract.v0.1.schema.json  csc.execution-receipt.v0.1.schema.json  csc.policy-decision.v0.1.schema.json  csc.policy.v0.1.schema.json
scripts/: check_schemas.py
tests/: helpers.py  test_adversarial.py  test_approval.py  test_cli.py  test_conformance.py  test_executor.py  test_integration_hardened.py  test_limits.py  test_pathutil.py  test_policy.py  test_policy_loading.py  test_receipt_integrity.py  test_sandbox.py  test_schema.py  test_signing.py  test_smoke.py
(+18 files in other folders)
